apps/prod/proxmenux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-proxmenux
  namespace: proxmox # Ensure this matches your describe output
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-proxmenux-slice
  namespace: proxmox
  labels:
    kubernetes.io/service-name: external-proxmenux
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8008
endpoints:
  - addresses:
      - "192.168.31.210"
    conditions:
      ready: true
